Update raw cells

--- a/SlicerWeb.ipynb
+++ b/SlicerWeb.ipynb
@@ -14,9 +14,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run this cell (Shift+Enter) to show application here\n",
-    "import JupyterNotebooksLib as slicernb\n",
-    "slicernb.AppWindow(contents='full')"
+    "repoName = 'Semiology-Visualisation-Tool'\n",
+    "repoDir = f'{repoName}-master'\n",
+    "url = f'https://github.com/thenineteen/{repoName}/archive/master.zip'\n",
+    "archiveFilePath = f'{repoName}.zip'\n",
+    "outputDir = '.'\n",
+    "downloadAndExtractArchive(url, archiveFilePath, outputDir)\n",
+    "pip_install(f'--quiet --editable {repoDir}')\n",
+    "from os.path import splitext, basename\n",
+    "moduleFactory = slicer.app.moduleManager().factoryManager()\n",
+    "modulePath = f'{repoDir}/slicer/SemiologyVisualisation.py'\n",
+    "moduleFactory.registerModule(qt.QFileInfo(modulePath))\n",
+    "stem = splitext(basename(modulePath))[0]\n",
+    "moduleFactory.loadModules([stem])\n",
+    "selectModule('SemiologyVisualisation')"
    ]
   },
   {
@@ -25,17 +36,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run this cell to load a file from a URL.\n",
-    "# You can load your own data by changing inputs of downloadFromURL.\n",
-    "# Any questions? Write us on the Slicer forum: https://discourse.slicer.org\n",
-    "slicer.mrmlScene.Clear()\n",
-    "\n",
-    "volume = slicernb.downloadFromURL(\n",
-    "    uris=\"https://github.com/Slicer/SlicerTestingData/releases/download/MD5/39b01631b7b38232a220007230624c8e\",\n",
-    "    fileNames=\"MRHead.nrrd\",\n",
-    "    nodeNames=\"Volume\")[0]\n",
-    "\n",
-    "slicernb.showVolumeRendering(volume)"
+    "# Run this cell (Shift+Enter) to show application here\n",
+    "import JupyterNotebooksLib as slicernb\n",
+    "slicernb.AppWindow(contents='full')"
    ]
   },
   {
