--- a/SVT-web.ipynb
+++ b/SVT-web.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a href=\"../desktop\" target=\"_blank\"><img src=\"https://www.slicer.org/img/3DSlicerLogo-H-Color-218x144.png\"/>\n",
+    "<h1><center>Click here to open 3D Slicer in a new window</center></h1></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -19,29 +27,39 @@
     "moduleFactory.registerModule(qt.QFileInfo(modulePath))\n",
     "stem = splitext(basename(modulePath))[0]\n",
     "moduleFactory.loadModules([stem])\n",
-    "selectModule('SemiologyVisualisation')\n",
+    "selectModule('SemiologyVisualisation')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run this cell (Shift+Enter) to show application here\n",
     "import JupyterNotebooksLib as slicernb\n",
     "slicernb.AppWindow(contents='full')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Slicer 4.11",
    "language": "python",
-   "name": "python3"
+   "name": "slicer-4.11"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
