--- a/SVT-web.ipynb
+++ b/SVT-web.ipynb
@@ -14,20 +14,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from os.path import splitext, basename\n",
+    "\n",
+    "# Download code and files\n",
     "repoName = 'Semiology-Visualisation-Tool'\n",
     "repoDir = f'{repoName}-master'\n",
     "url = f'https://github.com/thenineteen/{repoName}/archive/master.zip'\n",
     "archiveFilePath = f'{repoName}.zip'\n",
     "outputDir = '.'\n",
     "downloadAndExtractArchive(url, archiveFilePath, outputDir)\n",
+    "\n",
+    "# Install\n",
     "pip_install(f'--quiet --editable {repoDir}')\n",
-    "from os.path import splitext, basename\n",
+    "\n",
+    "# Load module\n",
     "moduleFactory = slicer.app.moduleManager().factoryManager()\n",
     "modulePath = f'{repoDir}/slicer/SemiologyVisualisation.py'\n",
     "moduleFactory.registerModule(qt.QFileInfo(modulePath))\n",
     "stem = splitext(basename(modulePath))[0]\n",
     "moduleFactory.loadModules([stem])\n",
-    "selectModule('SemiologyVisualisation')"
+    "selectModule('SemiologyVisualisation')\n",
+    "slicer.semiologyVisualisation.setLiteMode()\n",
+    "\n",
+    "# Preload data\n",
+    "slicer.semiologyVisualisation.loadDataButton.clicked()"
    ]
   },
   {
@@ -40,13 +50,6 @@
     "import JupyterNotebooksLib as slicernb\n",
     "slicernb.AppWindow(contents='full')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
