--- a/SVT-web.ipynb
+++ b/SVT-web.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a href=\"../desktop\" target=\"_blank\"><img src=\"https://www.slicer.org/img/3DSlicerLogo-H-Color-218x144.png\"/>\n",
-    "<h1><center>Click here to open 3D Slicer in a new window</center></h1></a>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -37,7 +29,17 @@
     "slicer.semiologyVisualisation.setLiteMode()\n",
     "\n",
     "# Preload data\n",
-    "slicer.semiologyVisualisation.loadDataButton.clicked()"
+    "slicer.semiologyVisualisation.loadDataButton.clicked()\n",
+    "\n",
+    "print('The module is ready! Click on the link below to open Slicer in a new tab')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a href=\"../desktop\" target=\"_blank\"><img src=\"https://www.slicer.org/img/3DSlicerLogo-H-Color-218x144.png\"/>\n",
+    "<h1><center>Click here to open 3D Slicer in a new tab</center></h1></a>"
    ]
   },
   {
