Show Slicer link after preparing the module

--- a/SVT-web.ipynb
+++ b/SVT-web.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "from os.path import splitext, basename\n",
+    "from IPython.core.display import display, HTML\n",
     "\n",
     "# Download code and files\n",
     "repoName = 'Semiology-Visualisation-Tool'\n",
@@ -31,26 +32,9 @@
     "# Preload data\n",
     "slicer.semiologyVisualisation.loadDataButton.clicked()\n",
     "\n",
-    "print('The module is ready! Click on the link below to open Slicer in a new tab')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a href=\"../desktop\" target=\"_blank\"><img src=\"https://www.slicer.org/img/3DSlicerLogo-H-Color-218x144.png\"/>\n",
-    "<h1><center>Click here to open 3D Slicer in a new tab</center></h1></a>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Run this cell (Shift+Enter) to show application here\n",
-    "import JupyterNotebooksLib as slicernb\n",
-    "slicernb.AppWindow(contents='full')"
+    "html = \"\"\"<a href=\"../desktop\" target=\"_blank\"><img src=\"https://www.slicer.org/img/3DSlicerLogo-H-Color-218x144.png\"/>\n",
+    "<h1><center>Click here to open 3D Slicer in a new tab</center></h1></a>\"\"\"\n",
+    "display(HTML(html))"
    ]
   }
  ],
