Print messages using HTML

--- a/SVT-web.ipynb
+++ b/SVT-web.ipynb
@@ -9,7 +9,13 @@
     "from os.path import splitext, basename\n",
     "from IPython.core.display import display, HTML\n",
     "\n",
+    "def say(string, header=True):\n",
+    "    if header:\n",
+    "        string = f'<h1>{string}</h1>'\n",
+    "    display(HTML(string))\n",
+    "\n",
     "# Download code and files\n",
+    "say('Downloading repository...')\n",
     "repoName = 'Semiology-Visualisation-Tool'\n",
     "repoDir = f'{repoName}-master'\n",
     "url = f'https://github.com/thenineteen/{repoName}/archive/master.zip'\n",
@@ -18,9 +24,11 @@
     "downloadAndExtractArchive(url, archiveFilePath, outputDir)\n",
     "\n",
     "# Install\n",
+    "say('Installing libraries...')\n",
     "pip_install(f'--quiet --editable {repoDir}')\n",
     "\n",
     "# Load module\n",
+    "say('Loading module...')\n",
     "moduleFactory = slicer.app.moduleManager().factoryManager()\n",
     "modulePath = f'{repoDir}/slicer/SemiologyVisualisation.py'\n",
     "moduleFactory.registerModule(qt.QFileInfo(modulePath))\n",
@@ -30,11 +38,13 @@
     "slicer.semiologyVisualisation.setLiteMode()\n",
     "\n",
     "# Preload data\n",
+    "say('Loading data...')\n",
     "slicer.semiologyVisualisation.loadDataButton.clicked()\n",
     "\n",
+    "say('Done')\n",
     "html = \"\"\"<a href=\"../desktop\" target=\"_blank\"><img src=\"https://www.slicer.org/img/3DSlicerLogo-H-Color-218x144.png\"/>\n",
     "<h1><center>Click here to open 3D Slicer in a new tab</center></h1></a>\"\"\"\n",
-    "display(HTML(html))"
+    "say(html, header=False)"
    ]
   }
  ],
