--- a/SVT-web.ipynb
+++ b/SVT-web.ipynb
@@ -6,34 +6,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from os.path import splitext, basename\n",
+    "#####################################\n",
+    "# Press the \"Run\" button above      #\n",
+    "# Fernando Pérez-García             #\n",
+    "# fernando.perezgarcia.17@ucl.ac.uk #\n",
+    "#####################################\n",
+    "\n",
+    "from pathlib import Path\n",
+    "from IPython.display import Javascript\n",
     "from IPython.core.display import display, HTML\n",
     "\n",
     "def say(string, header=True):\n",
-    "    if header:\n",
-    "        string = f'<h1>{string}</h1>'\n",
+    "    if header: string = f'<h1>{string}</h1>'\n",
     "    display(HTML(string))\n",
     "\n",
-    "# Download code and files\n",
+    "# Download repository\n",
     "say('Downloading repository...')\n",
     "repoName = 'Semiology-Visualisation-Tool'\n",
-    "repoDir = f'{repoName}-master'\n",
+    "repoDir = Path(f'{repoName}-master')\n",
     "url = f'https://github.com/thenineteen/{repoName}/archive/master.zip'\n",
     "archiveFilePath = f'{repoName}.zip'\n",
-    "outputDir = '.'\n",
-    "downloadAndExtractArchive(url, archiveFilePath, outputDir)\n",
+    "downloadAndExtractArchive(url, archiveFilePath, '.')\n",
     "\n",
-    "# Install\n",
+    "# Install Python module\n",
     "say('Installing libraries...')\n",
     "pip_install(f'--quiet --editable {repoDir}')\n",
     "\n",
     "# Load module\n",
     "say('Loading module...')\n",
     "moduleFactory = slicer.app.moduleManager().factoryManager()\n",
-    "modulePath = f'{repoDir}/slicer/SemiologyVisualisation.py'\n",
-    "moduleFactory.registerModule(qt.QFileInfo(modulePath))\n",
-    "stem = splitext(basename(modulePath))[0]\n",
-    "moduleFactory.loadModules([stem])\n",
+    "modulePath = repoDir / 'slicer/SemiologyVisualisation.py'\n",
+    "moduleFactory.registerModule(qt.QFileInfo(str(modulePath)))\n",
+    "moduleFactory.loadModules([modulePath.stem])\n",
     "selectModule('SemiologyVisualisation')\n",
     "slicer.semiologyVisualisation.setLiteMode()\n",
     "\n",
@@ -41,10 +45,12 @@
     "say('Loading data...')\n",
     "slicer.semiologyVisualisation.loadDataButton.clicked()\n",
     "\n",
-    "say('Done')\n",
+    "say('Done. Opening in a new tab...')\n",
     "html = \"\"\"<a href=\"../desktop\" target=\"_blank\"><img src=\"https://www.slicer.org/img/3DSlicerLogo-H-Color-218x144.png\"/>\n",
     "<h1><center>Click here to open 3D Slicer in a new tab</center></h1></a>\"\"\"\n",
-    "say(html, header=False)"
+    "say(html, header=False)\n",
+    "\n",
+    "display(Javascript('window.open(\"../desktop\");'))"
    ]
   }
  ],
