--- a/SVT-web.ipynb
+++ b/SVT-web.ipynb
@@ -6,11 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#####################################\n",
-    "# Press the \"Run\" button above      #\n",
-    "# Fernando Pérez-García             #\n",
-    "# fernando.perezgarcia.17@ucl.ac.uk #\n",
-    "#####################################\n",
+    "###############################################\n",
+    "##     Press the \"Run\" button above          ##\n",
+    "##     Fernando Pérez-García, 2020           ##\n",
+    "##     fernando.perezgarcia.17@ucl.ac.uk     ##\n",
+    "###############################################\n",
     "\n",
     "from pathlib import Path\n",
     "from IPython.display import Javascript\n",
@@ -32,7 +32,7 @@
     "say('Installing libraries...')\n",
     "pip_install(f'--quiet --editable {repoDir}')\n",
     "\n",
-    "# Load module\n",
+    "# Load Python and Slicer modules\n",
     "say('Loading module...')\n",
     "moduleFactory = slicer.app.moduleManager().factoryManager()\n",
     "modulePath = repoDir / 'slicer/SemiologyVisualisation.py'\n",
