--- a/SVT-web.ipynb
+++ b/SVT-web.ipynb
@@ -45,9 +45,9 @@
     "say('Loading data...')\n",
     "slicer.semiologyVisualisation.loadDataButton.clicked()\n",
     "\n",
-    "say('Done. Opening in a new tab...')\n",
+    "say('Done. Trying to open in a new tab...')\n",
     "html = \"\"\"<a href=\"../desktop\" target=\"_blank\"><img src=\"https://www.slicer.org/img/3DSlicerLogo-H-Color-218x144.png\"/>\n",
-    "<h1><center>Click here to open 3D Slicer in a new tab</center></h1></a>\"\"\"\n",
+    "<h1><center>Click here to manually open 3D Slicer in a new tab</center></h1></a>\"\"\"\n",
     "say(html, header=False)\n",
     "\n",
     "display(Javascript('window.open(\"../desktop\");'))"
